# rs-es

./: Cargo.toml
src/: error.rs  lib.rs
src/operations/: bulk.rs  delete.rs  get.rs  index.rs
src/operations/search/: mod.rs
src/operations/search/aggregations/: bucket.rs  common.rs  composite.rs  mod.rs
src/query/: full_text.rs  mod.rs
