[package]
name = "rs-es"
version = "0.12.3"
authors = ["Ben Ashford"]
license = "Apache-2.0"
repository = "https://github.com/benashford/rs-es"
description = "Client for the ElasticSearch REST API"
readme = "README.md"
keywords = ["elasticsearch", "elastic"]
exclude = [".gitignore", ".travis.yml", "docker-compose.yml"]
edition = "2018"

[features]
default = []
es5 = []
geo = ["geojson"]

[lib]
name = "rs_es"

[dependencies]
geojson = { version = "0.24", optional = true}
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
url = "2.0"

[dev-dependencies]
env_logger = "0.10"
regex = "1.2"
doc-comment = "0.3"
